--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3",
+    "react-star-ratings": "^2.3.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
