--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/node": "20.6.5",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-redux": "^7.1.27",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "flowbite": "^1.8.1",
@@ -19,8 +21,9 @@
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-redux": "^8.1.3",
     "react-star-ratings": "^2.3.0",
+    "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
