--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.27",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
+    "firebase": "^10.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
     "next": "13.5.3",
