--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
     "react-star-ratings": "^2.3.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-webextension-storage": "^1.0.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
