--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase": "^10.4.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
-    "next": "13.5.3",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
