--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-redux": "^7.1.27",
+    "axios": "^1.5.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "firebase": "^10.4.0",
@@ -22,12 +23,15 @@
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-picker": "^1.1.1",
+    "react-image-upload": "^3.0.1",
     "react-redux": "^8.1.3",
     "react-star-ratings": "^2.3.0",
     "redux-persist": "^6.0.0",
     "redux-persist-webextension-storage": "^1.0.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
