--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.1",
     "next": "^13.5.4",
