--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/json-schema": "^7.0.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
