--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "@types/connect": "^3.4.36",
     "@types/firebase": "^3.2.1",
     "@types/node": "20.6.5",
     "@types/react": "18.2.22",
