--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-redux": "^7.1.27",
+    "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
     "chartjs-react": "^4.1.0",
     "eslint": "8.50.0",
@@ -27,6 +28,7 @@
     "flowbite-react": "^0.6.1",
     "next": "^13.5.4",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.3",
     "react-star-ratings": "^2.3.0",
