--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-image-upload": "^3.0.1",
     "react-redux": "^8.1.3",
+    "react-speech-recognition": "^3.10.0",
     "react-star-ratings": "^2.3.0",
     "redux-persist": "^6.0.0",
     "redux-persist-webextension-storage": "^1.0.2",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/json-schema": "^7.0.13",
+    "@types/react-speech-recognition": "^3.9.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
