--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.3",
     "react-speech-recognition": "^3.10.0",
     "react-star-ratings": "^2.3.0",
